refactor: reconstruct chapter logic
